# TicTacToeGames

./: .gitignore  CMakeLists.txt  README.md  XO_Game.rc  XO_Game.sln  XO_Game.vcxproj  XO_Game.vcxproj.filters
Include/: Connect4Game.h  FFiveGame.h  FrameSwitcher.h  Game.h  HomeFrame.h  PyramidGame.h  ResultFrame.h
Resources/: resource.qrc
forms/: 5x5Game.ui  Connect4.ui  HomeFrame.ui  HomeWindow.ui  PyramidGame.ui  ResultFrame.ui  XOFrame.ui
include/: PyramicGame.h
resource/: resource.qrc
src/: Game.h  GameManager.cpp  Player.cpp  main.cpp
src/5x5/: FFiveComputerPlayer.cpp  FFiveGame.cpp  FFiveGame.h  FFiveGame.hpp  FFivePlayer.cpp  FFiveRandomPlayer.cpp
src/Connect4/: Connect4ComputerPlayer.cpp  Connect4Game.cpp  Connect4Game.h  Connect4Player.cpp  Connect4RandomPlayer.cpp
src/FrameSwitcher/: FrameSwitcher.cpp  FrameSwitcher.h
src/HomeFrame/: HomeFrame.cpp
src/Main/: HomeWindow.cpp  HomeWindow.h
src/Pyramid/: PyramidAiPlayer.cpp  PyramidComputerPlayer.cpp  PyramidGame.cpp  PyramidGame.h  PyramidGame.hpp  PyramidPlayer.cpp  PyramidRandomPlayer.cpp
src/ResultFrame/: ResultFrame.cpp  ResultFrame.h
